[project]
name = "backend-todo"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Ortiz",email = "pablo.miguel.dias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[stardard] (>=0.124.4,<0.125.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "python-semantic-release (>=10.5.2,<11.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpaths = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = "ruff check"
format = "ruff format"
pre_format = "ruff check --fix"
pre_test = "task lint"
run = 'fastapi dev backend_todo/app.py'
run_local = 'fastapi dev backend_todo/app.py --host 0.0.0.0'
test = "pytest -s -x --cov=backend_todo -vv"
post_test = "coverage html"

[tool.semantic_release]
version_variable = "backend_todo/__init__.py:__version__"
branch = "main"
upload_to_pypi = false
upload_to_repository = false
commit_subject = "chore(release): {version}"
